# libAkaiMpd

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/QtExample/: CMakeLists.txt  QtExample.pro  inputthread.cpp  inputthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/Simple/: CMakeLists.txt  simple.cpp
src/: CMakeLists.txt  device.cpp  device.h  devicelist.cpp  devicelist.h  devicemanager.cpp  devicemanager.h  main.cpp  utils.h
src/linux/: CMakeLists.txt  device.cpp  device.hpp  devicemanager.cpp  devicemanager.h  devicemanager.hpp
src/win32/: CMakeLists.txt  device.cpp  device.hpp  devicemanager.cpp  devicemanager.hpp
